--- a/index.html
+++ b/index.html
@@ -2780,124 +2780,105 @@
          </div>
       </div>
    </section>
-   <section class="h4-cta-section">
-      <div class="thumb">
-         <img src="assets/images/home-4/cta/h4-cta-bg.webp" alt="">
-      </div>
+
+   <section class="tj-cta-section">
       <div class="container">
          <div class="row">
             <div class="col-12">
-               <div class="h4-cta-wrapper">
-                  <div class="h4-cta-shape">
-                     <img src="assets/images/home-4/cta/cta-logo.svg" alt="">
-                  </div>
-                  <div class="h4-cta-newsletter">
+               <div class="cta-wrapper">
+                  <div class="cta-title">
                      <h2 class="title text-anim">
                         <div style="position:relative;display:inline-block;">
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              S</div>
-
+                              G</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              u</div>
+                              e</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              b</div>
+                              t</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              s</div>
+                           </div>
+                        </div>
+                        <div style="position:relative;display:inline-block;">
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
                               c</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              r</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              i</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              b</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
-                        </div>
-                        <div
-                           style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
                               o</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                           </div>
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              o</div>
-
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              u</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              r</div>
-
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              N</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              w</div>
+                              n</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
                               s</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
+                              u</div>
+                           <div
+                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
                               l</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
+                              t</div>
+                           <div
+                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
+                              a</div>
+                           <div
+                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
+                              n</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
                               t</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
+                           </div>
+                        </div>
+                        <div style="position:relative;display:inline-block;">
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
+                              n</div>
                            <div
                               style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              r</div>
+                              o</div>
+                           <div
+                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
+                              w</div>
+                           <div
+                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
+                              !</div>
+                           <div
+                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
+                           </div>
                         </div>
                      </h2>
-                     <div class="newsletter-form style-4 wow fadeInUp" data-wow-delay="0.4s"
-                        style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp; opacity: 1;">
-                        <form>
-                           <div class="form-input">
-                              <input type="email" id="email" name="email" placeholder="Enter email" required="">
-                              <button type="submit"><i class="fa-solid fa-paper-plane"></i> Subscribe</button>
+                  </div>
+                  <div class="cta-button wow fadeInUp" data-wow-delay="0.1s"
+                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp; opacity: 1;">
+                     <a href="contact.html" class="tj-primary-btn white-btn">
+                        <div class="btn_inner">
+                           <div class="btn_icon">
+                              <span>
+                                 <i class="tji-arrow-right"></i>
+                                 <i class="tji-arrow-right"></i>
+                              </span>
                            </div>
-                        </form>
-                     </div>
+                           <div class="btn_text">
+                              <span>Lets talk now</span>
+                           </div>
+                        </div>
+                     </a>
                   </div>
                </div>
             </div>
          </div>
       </div>
+
+      <!-- <img class="cta-shape-1" src="assets/images/shapes/cta-shapes-1.png" alt="Shapes">
+      <img class="cta-shape-2" src="assets/images/shapes/cta-shapes-2.png" alt="Shapes"> -->
    </section>
    <footer class="tj-footer-area footer-2 style-2">
       <div class="footer-top-area fix">
