--- a/index.html
+++ b/index.html
@@ -2529,138 +2529,9 @@
                   style="order: 0; place-self: auto; grid-area: auto; z-index: auto; float: none; flex-shrink: 1; display: block; margin: 0px; inset: auto; position: relative; flex-basis: auto; overflow: visible; box-sizing: border-box; width: 526px; height: 230px; padding: 0px 0px 115px;">
                   <div class="sec-heading mb-0 tj-sticky"
                      style="translate: none; rotate: none; scale: none; inset: 0px auto auto 0px; margin: 0px; max-width: 526px; width: 526px; max-height: 115.188px; height: 115.188px; padding: 0px; transform: translate(0px, 0px);">
-                     <h2 class="sec-title text-anim">
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              N</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              o</div>
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              m</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              a</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              r</div>
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              h</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              s</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              r</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              a</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              g</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              y</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              ,</div>
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              w</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              '</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              v</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              g</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              o</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              i</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              t</div>
-                        </div>
-                        <div style="position:relative;display:inline-block;">
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              h</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              a</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              n</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              d</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              l</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              e</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              d</div>
-                           <div
-                              style="position: relative; display: inline-block; translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; transform: translate(0px, 0px);">
-                              .</div>
-                        </div>
-                     </h2>
+                     <h1 class="hero-title text-anim" style="font-family: libre !important; font-size: 50px;">
+                        Frequently Asked Questions
+                     </h1>
                   </div>
                </div>
             </div>
@@ -2673,18 +2544,18 @@
                            <!-- button -->
                            <button class="accordion-button collapsed" data-bs-toggle="collapse"
                               data-bs-target="#collapseOne-1" aria-expanded="false">
-                              How do consultants add value to a business?
+
+                              What is Podojil?
+
                            </button>
                         </h2>
                         <!-- content -->
                         <div id="collapseOne-1" class="accordion-collapse collapse" data-bs-parent="#accordionExample"
                            style="">
                            <div class="accordion-body">
-                              <p>You might need a consultant if you're facing specifics challenges, such as
-                                 stagnating our growth, operational inefficiencies, strategic issues, or if you lack
-                                 expertise in certain areas. Consultants can also help if you need an objective
-                                 perspective on your business businesses ever changing marketplace. We are committed
-                                 to the delivering exceptional the value through strategic.
+                              <p>Podojil is a non-profit organization providing education, training, and certifications
+                                 in safety, health, and environmental fields.
+
                               </p>
                            </div>
                         </div>
@@ -2695,17 +2566,19 @@
                            <!-- button -->
                            <button class="accordion-button collapsed" data-bs-toggle="collapse"
                               data-bs-target="#collapseOne-2" aria-expanded="false">
-                              How do I know if my business needs a consultant?
+
+                              Are Podojil certifications recognized?
+
                            </button>
                         </h2>
                         <!-- content -->
                         <div id="collapseOne-2" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                            <div class="accordion-body">
-                              <p>You might need a consultant if you're facing specifics challenges, such as
-                                 stagnating our growth, operational inefficiencies, strategic issues, or if you lack
-                                 expertise in certain areas. Consultants can also help if you need an objective
-                                 perspective on your business businesses ever changing marketplace. We are committed
-                                 to the delivering exceptional the value through strategic.
+                              <p>
+                                 Our certifications are trusted across industries worldwide and help professionals
+                                 advance their
+                                 careers.
+
                               </p>
                            </div>
                         </div>
@@ -2716,17 +2589,19 @@
                            <!-- button -->
                            <button class="accordion-button collapsed" data-bs-toggle="collapse"
                               data-bs-target="#collapseOne-3" aria-expanded="false">
-                              How do business consultants charge for their services?
+
+                              Who can enroll in Podojil courses?
+
                            </button>
                         </h2>
                         <!-- content -->
                         <div id="collapseOne-3" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                            <div class="accordion-body">
-                              <p>You might need a consultant if you're facing specifics challenges, such as
-                                 stagnating our growth, operational inefficiencies, strategic issues, or if you lack
-                                 expertise in certain areas. Consultants can also help if you need an objective
-                                 perspective on your business businesses ever changing marketplace. We are committed
-                                 to the delivering exceptional the value through strategic.
+                              <p>
+                                 Anyone—from students to professionals—seeking skills and certifications in safety,
+                                 health, or
+                                 environmental fields.
+
                               </p>
                            </div>
                         </div>
@@ -2758,18 +2633,16 @@
                            <!-- button -->
                            <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseOne-5"
                               aria-expanded="true">
-                              How can I measure the success of a consulting engagement?
+
+                              How are courses delivered?
+
                            </button>
                         </h2>
                         <!-- content -->
                         <div id="collapseOne-5" class="accordion-collapse collapse show"
                            data-bs-parent="#accordionExample" style="">
                            <div class="accordion-body">
-                              <p>You might need a consultant if you're facing specifics challenges, such as
-                                 stagnating our growth, operational inefficiencies, strategic issues, or if you lack
-                                 expertise in certain areas. Consultants can also help if you need an objective
-                                 perspective on your business businesses ever changing marketplace. We are committed
-                                 to the delivering exceptional the value through strategic.
+                              <p>We offer flexible options including online, onsite, and classroom-based training.
                               </p>
                            </div>
                         </div>
